Adding other files for creating app

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,30 @@
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# Databases
-*.db
-*.sqlite3
+*.py[cod]
+*$py.class
 
 # Virtual environments
 .venv/
 env/
+venv/
 
-# PyInstaller
+# Databases (local SQLite)
+*.db
+*.sqlite3
+
+# Logs
+*.log
+
+# PyInstaller build folders
 /build/
 dist/
 *.spec
 
-# IDE
+# IDEs / Editors
 .vscode/
 .idea/
+*.iml
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
